changed hole numbers

--- a/distanceChecker.html
+++ b/distanceChecker.html
@@ -19,8 +19,8 @@
                     --Select Course--
                     </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#" onclick="updateCourse('Rocky_Ridge')">Rocky Ridge</a>
-                        <a class="dropdown-item" href="#" onclick="updateCourse('Williston')">Williston</a>
+                        <a class="dropdown-item" href="#" onclick="updateCourse('Rocky_Ridge')">Rocky Ridge</a><br>
+                        <a class="dropdown-item" href="#" onclick="updateCourse('Williston')">Williston</a><br>
                         <a class="dropdown-item" href="#" onclick="updateCourse('Arrowhead')">Arrowhead</a>
                     </div>
             </div>
@@ -39,6 +39,15 @@
                         <a class="dropdown-item" onclick="updateHole('seven')" href="#">7</a>
                         <a class="dropdown-item" onclick="updateHole('eight')" href="#">8</a>
                         <a class="dropdown-item" onclick="updateHole('nine')" href="#">9</a>
+                        <a class="dropdown-item" onclick="updateHole('ten')" href="#">10</a>
+                        <a class="dropdown-item" onclick="updateHole('eleven')" href="#">11</a>
+                        <a class="dropdown-item" onclick="updateHole('twelve')" href="#">12</a>
+                        <a class="dropdown-item" onclick="updateHole('thirteen')" href="#">13</a>
+                        <a class="dropdown-item" onclick="updateHole('fourteen')" href="#">14</a>
+                        <a class="dropdown-item" onclick="updateHole('fifteen')" href="#">15</a>
+                        <a class="dropdown-item" onclick="updateHole('sixteen')" href="#">16</a>
+                        <a class="dropdown-item" onclick="updateHole('seventeen')" href="#">17</a>
+                        <a class="dropdown-item" onclick="updateHole('eighteen')" href="#">18</a>
                     </div>
             </div>
             <pre id="holeDisp"></pre>
