--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default">Start Round Now</button>
+                    <a href="scorecard.html"></button type="button" class="btn btn-default">Start Round Now</button></a>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -135,16 +135,16 @@
                     Statistics
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body column">
                     <div class="checkbox">
                         <label>
-                            <input type="checkbox" value="">Scores</label>
+                            <input id="scoresCheck" type="checkbox" value="">Scores</label>
                         <label>
-                            <input type="checkbox" value="">Putts Per Green</label>
+                            <input id="puttsCheck" type="checkbox" value="">Putts Per Green</label>
                         <label>
-                            <input type="checkbox" value="">Fairways Hit</label>
+                            <input id="fairwayCheck" type="checkbox" value="">Fairways Hit</label>
                         <label>
-                            <input type="checkbox" value="">Green in Regulation (GIR)</label>
+                            <input id="girCheck" type="checkbox" value="">Green in Regulation (GIR)</label>
                     </div>
                 </div>
             </div>
@@ -165,11 +165,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
-
     <script>
         $("#signin").hide()
         $("#startaround").hide()
         $("#createAccount").hide()
+       
 
         function showSignIn() {
             $("#signin").show()
