updated scorecard ids

--- a/public/scorecard.html
+++ b/public/scorecard.html
@@ -15,129 +15,129 @@
 <body>
     <div id="holescontainer">
         <span class="firstbox"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
-        <span class="holes"></span>
+        <span class="holes" id="numberHole1">1</span>
+        <span class="holes" id="numberHole2">2</span>
+        <span class="holes" id="numberHole3">3</span>
+        <span class="holes" id="numberHole4">4</span>
+        <span class="holes" id="numberHole5">5</span>
+        <span class="holes" id="numberHole6">6</span>
+        <span class="holes" id="numberHole7">7</span>
+        <span class="holes" id="numberHole8">8</span>
+        <span class="holes" id="numberHole9">9</span>
+        <span class="holes" id="numberHole10">10</span>
+        <span class="holes" id="numberHole11">11</span>
+        <span class="holes" id="numberHole12">12</span>
+        <span class="holes" id="numberHole13">13</span>
+        <span class="holes" id="numberHole14">14</span>
+        <span class="holes" id="numberHole15">15</span>
+        <span class="holes" id="numberHole16">16</span>
+        <span class="holes" id="numberHole17">17</span>
+        <span class="holes" id="numberHole18">18</span>
     </div>
     <div id="yardagecontainer">
             <span class="firstbox"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
-            <span class="holes"></span>
+            <span class="holes" id="yardhole1"></span>
+            <span class="holes" id="yardHole2"></span>
+            <span class="holes" id="yardHole3"></span>
+            <span class="holes" id="yardHole4"></span>
+            <span class="holes" id="yardHole5"></span>
+            <span class="holes" id="yardHole6"></span>
+            <span class="holes" id="yardHole7"></span>
+            <span class="holes" id="yardHole8"></span>
+            <span class="holes" id="yardHole9"></span>
+            <span class="holes" id="yardHole10"></span>
+            <span class="holes" id="yardHole11"></span>
+            <span class="holes" id="yardHole12"></span>
+            <span class="holes" id="yardHole13"></span>
+            <span class="holes" id="yardHole14"></span>
+            <span class="holes" id="yardHole15"></span>
+            <span class="holes" id="yardHole16"></span>
+            <span class="holes" id="yardHole17"></span>
+            <span class="holes" id="yardHole18"></span>
         </div>
         <div id="scorecontainer">
                 <span class="firstbox"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
-                <span class="holes"></span>
+                <span class="holes" id="scoreHole1"></span>
+                <span class="holes" id="scoreHole2"></span>
+                <span class="holes" id="scoreHole3"></span>
+                <span class="holes" id="scoreHole4"></span>
+                <span class="holes" id="scoreHole5"></span>
+                <span class="holes" id="scoreHole6"></span>
+                <span class="holes" id="scoreHole7"></span>
+                <span class="holes" id="scoreHole8"></span>
+                <span class="holes" id="scoreHole9"></span>
+                <span class="holes" id="scoreHole11"></span>
+                <span class="holes" id="scoreHole12"></span>
+                <span class="holes" id="scoreHole13"></span>
+                <span class="holes" id="scoreHole14"></span>
+                <span class="holes" id="scoreHole15"></span>
+                <span class="holes" id="scoreHole16"></span>
+                <span class="holes" id="scoreHole17"></span>
+                <span class="holes" id="scoreHole18"></span>
+                <span class="holes" id="scoreHole19"></span>
             </div>
             <div id="handicapcontainer">
                     <span class="firstbox"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
-                    <span class="holes"></span>
+                    <span class="holes" id="handicapHole1"></span>
+                    <span class="holes" id="handicapHole2"></span>
+                    <span class="holes" id="handicapHole3"></span>
+                    <span class="holes" id="handicapHole4"></span>
+                    <span class="holes" id="handicapHole5"></span>
+                    <span class="holes" id="handicapHole6"></span>
+                    <span class="holes" id="handicapHole7"></span>
+                    <span class="holes" id="handicapHole8"></span>
+                    <span class="holes" id="handicapHole9"></span>
+                    <span class="holes" id="handicapHole10"></span>
+                    <span class="holes" id="handicapHole11"></span>
+                    <span class="holes" id="handicapHole12"></span>
+                    <span class="holes" id="handicapHole13"></span>
+                    <span class="holes" id="handicapHole14"></span>
+                    <span class="holes" id="handicapHole15"></span>
+                    <span class="holes" id="handicapHole16"></span>
+                    <span class="holes" id="handicapHole17"></span>
+                    <span class="holes" id="handicapHole18"></span>
                 </div>
                 <div id="gircontainer">
                         <span class="firstbox"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
-                        <span class="holes"></span>
+                        <span class="holes" id="girHole1"></span>
+                        <span class="holes" id="girHole2"></span>
+                        <span class="holes" id="girHole3"></span>
+                        <span class="holes" id="girHole4"></span>
+                        <span class="holes" id="girHole5"></span>
+                        <span class="holes" id="girHole6"></span>
+                        <span class="holes" id="girHole7"></span>
+                        <span class="holes" id="girHole8"></span>
+                        <span class="holes" id="girHole9"></span>
+                        <span class="holes" id="girHole10"></span>
+                        <span class="holes" id="girHole11"></span>
+                        <span class="holes" id="girHole12"></span>
+                        <span class="holes" id="girHole13"></span>
+                        <span class="holes" id="girHole14"></span>
+                        <span class="holes" id="girHole15"></span>
+                        <span class="holes" id="girHole16"></span>
+                        <span class="holes" id="girHole17"></span>
+                        <span class="holes" id="girHole18"></span>
                     </div>
                     <div id="puttscontainer">
                             <span class="firstbox"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
-                            <span class="holes"></span>
+                            <span class="holes" id="puttsHole1"></span>
+                            <span class="holes" id="puttsHole2"></span>
+                            <span class="holes" id="puttsHole3"></span>
+                            <span class="holes" id="puttsHole4"></span>
+                            <span class="holes" id="puttsHole5"></span>
+                            <span class="holes" id="puttsHole6"></span>
+                            <span class="holes" id="puttsHole7"></span>
+                            <span class="holes" id="puttsHole8"></span>
+                            <span class="holes" id="puttsHole9"></span>
+                            <span class="holes" id="puttsHole10"></span>
+                            <span class="holes" id="puttsHole11"></span>
+                            <span class="holes" id="puttsHole12"></span>
+                            <span class="holes" id="puttsHole13"></span>
+                            <span class="holes" id="puttsHole14"></span>
+                            <span class="holes" id="puttsHole15"></span>
+                            <span class="holes" id="puttsHole16"></span>
+                            <span class="holes" id="puttsHole17"></span>
+                            <span class="holes" id="puttsHole18"></span>
                         </div>
                         <h1 class="centered">Distance Calculator</h1>
                         <div class="dropdownGrid">
