--- a/public/scorecard.html
+++ b/public/scorecard.html
@@ -10,6 +10,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="course.js" type="text/javascript"></script>
     <script src="distance.js"></script>
+    <!-- <script>var obj = JSON.parse(response);
+    console.log(obj)</script> -->
     <title>Document</title>
 </head>
 <body>
