--- a/public/index.html
+++ b/public/index.html
@@ -85,15 +85,13 @@
 
     <div id="signin">
         <form method="POST" action="/users/add">
-
             <div>Username</div>
             <input id="text username" name="username">
             <div>Password</div>
             <input id="text password" name="password">
-            <button id="submit" onClick="submit()" value="Submit">Submit</button>
+            <button id="submit" value="Submit">Submit</button>
             <button id="signInButton" onclick="back()">Back</button>
             <button id="signInButton">Sign In</button>
-
         </form>
     </div>
 
